--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "lite-server": "^2.6.1",
     "node-sass": "^5.0.0",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
