--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "hammerjs": "^2.0.8",
     "lite-server": "^2.6.1",
-    "node-sass": "^5.0.0",
+    "node-sass": "^4.14.1",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "react-scripts": "2.1.1",
